# montes

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  environment.yml  pyproject.toml  requirements.txt  tasks.py
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
src/fastapi_example/: README_fastapi.md  fastapi_example.py
src/jupyter_example/: jupyter_notebook_example.ipynb  python_example.py
tests/: test_example.py  test_fastapi_example.py
