[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "fastapi-cli>=0.0.7",
    "requests>=2.32.3",
    "ruff>=0.9.10",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pip-tools>=7.4.1",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.0",
]
